# coffee-shop-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_admin.py  docker-compose.yaml  pyproject.toml  test_api.py  test_cleanup.py
app/: main.py
app/api/: auth.py  users.py
app/core/: celery_app.py  config.py  dependencies.py  security.py
app/db/: database.py
app/models/: user.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  user_service.py
app/tasks/: __init__.py  cleanup.py
